...
    var session: URLSession = .shared
    private let buttonGradientLayer = CAGradientLayer()
    private let saveButtonGradientLayer = CAGradientLayer()
    
    private let label: UILabel = {
        let label = UILabel()
        label.text = "Random Photo"
        label.textColor = .systemMint
        label.font = UIFont(name: "AvenirNext-Bold", size: 30)
        label.textAlignment = .left
        label.translatesAutoresizingMaskIntoConstraints = false
        label.accessibilityIdentifier = "RandomPhotoLabelIdentifier"
        
...
    
    // ImageView for photo
    internal let imageView: UIImageView = {
        let imageView = UIImageView()
        imageView.contentMode = .scaleAspectFill
        imageView.backgroundColor = .white
        imageView.accessibilityIdentifier = "MainImageViewIdentifier"
        
        // Borders for imageView
        imageView.layer.borderWidth = 4
        imageView.layer.borderColor = UIColor.systemMint.cgColor
        imageView.layer.cornerRadius = 12
        imageView.clipsToBounds = true
...
    // Button for new photo
    private let button: UIButton = {
        let button = UIButton()
        button.setTitle("New Photo", for: .normal)
        button.titleLabel?.font = UIFont(name: "Georgia", size: 20)
        button.setTitleColor(.black, for: .normal)
        button.accessibilityIdentifier = "RandomPhotoButtonIdentifier"
        button.backgroundColor = .systemMint
        
        // Rounding corners
        button.layer.cornerRadius = 15
        button.clipsToBounds = true
        
...
    
    // Button for oppening bottomSheet with info
    private let infoButton: UIButton = {
        let infoButton = UIButton(type: .infoDark)
        infoButton.tintColor = .white
        infoButton.translatesAutoresizingMaskIntoConstraints = false
        infoButton.accessibilityIdentifier = "InfoButtonIdentifier"
        return infoButton
    }()
    
    // Button to save photo to the library
    private let saveButton: UIButton = {
        let saveButton = UIButton()
...
    ]
    
    private var currentColorIndex = 0
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "MainVCIdentifier"
        colors.shuffle() // Mixing colors for background
        view.backgroundColor = colors.randomElement()
        
        imageView.backgroundColor = view.backgroundColor
        imageView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(imageView)
...
                self.imageView.accessibilityLabel = "ImageLoaded"
            }
        }.resume() // Starting the task
    }
    
    func showErrorAlert(message: String) {
        let alertController = UIAlertController(title: "Something went wrong", message: message, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK", style: .default))
        alertController.view.accessibilityIdentifier = "ErrorAlertIdentifier"
        
        // Finding the first active UIWindowScene and its window to present alert
        if let windowScene = UIApplication.shared.connectedScenes.first as? UIWindowScene,
           let window = windowScene.windows.first,
           let currentViewController = window.rootViewController {
            currentViewController.present(alertController, animated: true, completion: nil)
...
    }
    
    @objc private func showInfoBottomSheet() {
        let storyboard = UIStoryboard(name: "Main", bundle: nil)
        let bottomSheetVC = storyboard.instantiateViewController(withIdentifier: "InfoBottomSheetVC")  // Instantiates the view controller from storyboard by storyboardID
        
        bottomSheetVC.view.accessibilityIdentifier = "BottomSheetIdentifier"
        
        let bottomLabel = UILabel()
        bottomLabel.text = "I do not own the rights for any of these images. They are all taken from open sources. All credits go to the rightful owners."
        bottomLabel.textColor = .black
        bottomLabel.font = UIFont(name: "Georgia", size: 22)
        bottomLabel.textAlignment = .center
...
