...
    var session: URLSession = .shared
    private let buttonGradientLayer = CAGradientLayer()
    private let saveButtonGradientLayer = CAGradientLayer()
    
    private let label: UILabel = {
        let label = UILabel()
        label.text = "Random Dog Photo"
        label.textColor = .systemMint
        label.font = UIFont(name: "AvenirNext-Bold", size: 30)
        label.textAlignment = .left
        label.translatesAutoresizingMaskIntoConstraints = false
        label.accessibilityIdentifier = "RandomDogLabelIdentifier"
        
...
    
    // ImageView for photo
    internal let imageView: UIImageView = {
        let imageView = UIImageView()
        imageView.contentMode = .scaleAspectFill
        imageView.backgroundColor = .systemMint
        imageView.accessibilityIdentifier = "DogsImageViewIdentifier"
        
        // Borders for imageView
        imageView.layer.borderWidth = 4
        imageView.layer.borderColor = UIColor.systemMint.cgColor
        imageView.layer.cornerRadius = 12
        imageView.clipsToBounds = true
...
    private let button: UIButton = {
        let button = UIButton()
        button.backgroundColor = .systemPink
        button.setTitle("New Dog", for: .normal)
        button.titleLabel?.font = UIFont(name: "Georgia", size: 20)
        button.setTitleColor(.black, for: .normal)
        button.accessibilityIdentifier = "RandomDogButtonIdentifier"
        
        // Rounding corners
        button.layer.cornerRadius = 15
        button.clipsToBounds = true
          
        // Dimming when pressed
...
        
        return saveButton
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "DogsVCIdentifier"
        view.backgroundColor = .systemMint
        
        imageView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(imageView)
        NSLayoutConstraint.activate([
            imageView.widthAnchor.constraint(equalTo: view.widthAnchor, multiplier: 0.93), // 93% of the parent view's width
...
