...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MainScreenAccId" label="MainScreenAccId">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </view>
                    <tabBarItem key="tabBarItem" title="Any Photo" id="ZPf-De-LcE">
                        <imageReference key="image" image="photo.artframe" catalog="system" renderingMode="original" variableValue="1"/>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="Random Photo " id="IZ6-VK-Fez" userLabel="Random Photo"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
                            </imageView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="jK2-8c-Cjf"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cats" image="cat" catalog="system" id="eCL-bt-9Jg"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Lag-MO-fOg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1803.8167938931297" y="-27.464788732394368"/>
        </scene>
        <!--Random Dog VC-->
...
                            </imageView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="zJ1-0W-osQ"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Dogs" image="dog" catalog="system" id="GIw-p0-sCp"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6jT-TK-5pU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2577.8625954198474" y="-27.464788732394368"/>
        </scene>
        <!--Info Bottom Sheet VC-->
...
